[gd_scene load_steps=5 format=2]

[ext_resource path="res://img/Sloth (all stages).png" type="Texture" id=1]
[ext_resource path="res://entities/TheSloth.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="CircleShape2D" id=2]
radius = 128.0

[node name="TheSloth" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
rotation = -1.5708
texture = ExtResource( 1 )
vframes = 2

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
disabled = true

[node name="Vision" type="Area2D" parent="."]

[node name="Collision" type="CollisionShape2D" parent="Vision"]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="body_entered" from="Vision" to="." method="_on_Vision_body_entered"]
[connection signal="body_exited" from="Vision" to="." method="_on_Vision_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
